# robocore-cli

./: .gitignore  Makefile  README.md  build.py  cli.py  config.yaml  contextify.py  deploy.py  docker-compose.yml  environment_manager.py  host_manager.py  main.py  package-lock.json  parser.py  prep.py  pyproject.toml  requirements.txt  utils.py
.claude/: settings.local.json
commands/: __init__.py  build.py  clean.py  common.py  component.py  deploy.py  init.py  launch.py  pixi.py  prep.py  prepare_base.py  shell.py  stack.py  stage.py  validate.py  viz.py
core/: __init__.py  config.py  docker.py  exceptions.py  logger.py  models.py  renderer.py  sync.py  validation.py
docs/: changelog-external-images.md  commands.md  config-reference.md  configuration.md  example-mixed-components.yaml  external-images.md  faster.md  improvements.md  log.md  multi-host.md  networking.md  platform-notes.md  robocore-cli-process-flow.md  testing-strategy.md  tips.md  visualization.md  workspace-redesign-proposal.md
entities/: brick.py  composition.py  endpoint.py  host.py  package.py
managers/: environment.py  host.py  run.py
robocore_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build.py  deploy.py  prep.py  ssh_setup.py
segments/: base.Dockerfile  copy_and_build.Dockerfile  preinstall.Dockerfile
templates/: Dockerfile.base.j2  Dockerfile.builder.j2  Dockerfile.j2  __init__.py  docker-compose.fastdds.device.j2  docker-compose.fastdds.j2  docker-compose.j2  docker-compose.zenoh.device.j2  docker-compose.zenoh.j2  superclient.xml.j2
tests/: Vagrantfile  (+1 more)
(+59 files in other folders)
